--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.7",
     "spotify-web-api-node": "^5.0.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
